--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,7 @@ a:active { /* selected link */
   border-bottom: 2px solid #994c30; /* width of the border, type, color */
   transition: 0.2s opacity;
 }
+.button:hover {
+  opacity: 0.8; /* Reduces the opacity of the button to 80% */
+  text-decoration: none;
+}
