Added styling for contact button

--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,15 @@ a:active { /* selected link */
   opacity: 0.8; /* Reduces the opacity of the button to 80% */
   text-decoration: none;
 }
+.button.contact {
+  background-color: transparent;
+  color: #ff7f50 !important;
+  text-transform: uppercase;
+  border: 2px solid #ff7f50;
+}
+.button.contact:hover,
+.button.contact:focus,
+.button.contact:active {
+  background-color: #ff7f50;
+  color: #ffffff !important;
+}
