Added container class

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,13 @@ body {
   color: #4a4a4a;
 }
 
+header {
+  background-color: #ff44c4;
+  padding: 10px 5px 15px 5px;
+  margin: 10px;
+  border-bottom: 3px solid #4a4a4a;
+}
+
 h1, h2, h3, h4 {
   line-height: 1.4;
 }
@@ -82,4 +89,9 @@ a:active { /* selected link */
 .button.contact:active {
   background-color: #ff7f50;
   color: #ffffff !important;
+}
+
+/* Layout styling */
+.container {
+  padding: 0 15px;
 }
