--- a/css/style.css
+++ b/css/style.css
@@ -95,3 +95,7 @@ a:active { /* selected link */
 .container {
   padding: 0 15px;
 }
+
+.row {
+  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+}
