--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,9 @@ Secondary Color (Green): #489c79;
 body {
   background-color: #ffffff;
   font-family: 'Lato', sans-serif;
-  font-size: 16px; /* Sets the font size to 16px */
-  font-weight: 300; /* Sets the font weight to 300 */
-  line-height: 1.6; /* Sets the line-height to 1.6 * the font-size */
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 1.6;
   color: #4a4a4a;
 }
 
@@ -41,34 +41,33 @@ img {
 
 a {
   color: #ff7f50;
-  text-decoration: none; /* No underlining */
+  text-decoration: none;
 }
 a:hover,
 a:focus {
   color: #cc6540;
-  text-decoration: underline; /* Underlining when hovering over a link */
-}
-a:visited { /* visited link */
+  text-decoration: underline;}
+a:visited {
   color: #ff7f50;
 }
-a:active { /* selected link */
+a:active {
   color: #994c30;
 }
 
 .button {
-  display: inline-block; /* since the <a> tag is inline by default, we need to change this to inline-block, but more on this in the next exercise */
+  display: inline-block;
   background-color: #ff7f50;
-  color: #ffffff !important; /* needed to override the default link color */
+  color: #ffffff !important;
   font-weight: 400;
   padding: 10px;
   border-radius: 3px;
-  border-bottom: 2px solid #994c30; /* width of the border, type, color */
+  border-bottom: 2px solid #994c30;
   transition: 0.2s opacity;
 }
 .button:hover,
 .button:focus,
 .button:active {
-  opacity: 0.8; /* Reduces the opacity of the button to 80% */
+  opacity: 0.8;
   text-decoration: none;
 }
 .button.contact {
@@ -90,11 +89,11 @@ a:active { /* selected link */
 }
 
 .row {
-  margin: 25px 0; /* 25px top and bottom, 0 left and right */
+  margin: 25px 0;
 }
 
 #hero h1 {
-  text-align: center; /* Centers text */
+  text-align: center;
 }
 
 .center {
@@ -108,13 +107,21 @@ a:active { /* selected link */
 header {
   background-color: #ffe3c3;
   padding: 10px 5px 15px 5px;
-  margin: 10px;
-  border-bottom: 3px solid #4a4a4a;
+  /* border-bottom: 3px solid #4a4a4a; */
   text-align: center;
+  width: 100%;
+  position: fixed;
+  -webkit-box-shadow: 0px 5px 10px 0px rgba(50, 50, 50, 0.65);
+  -moz-box-shadow:    0px 5px 10px 0px rgba(50, 50, 50, 0.65);
+  box-shadow:         0px 5px 10px 0px rgba(50, 50, 50, 0.65);
 }
 
 nav > ul > li {
   display: inline-block;
+}
+
+nav {
+  width: 100%;
 }
 
 nav > ul > li > a {
@@ -122,4 +129,21 @@ nav > ul > li > a {
   text-transform: uppercase;
   font-weight: 700;
   color: #4a4a4a;
+}
+nav > ul > li > a:visited {
+  padding: 0 15px;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #4a4a4a;
+}
+
+#hero {
+  background-color: #ffe3c3;
+  padding: 20px 0;
+  display: inline-block;
+  width: 100%;
+}
+
+main {
+  padding-top: 133px;
 }
