--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ header {
   /* border-bottom: 3px solid #4a4a4a; */
   text-align: center;
   width: 100%;
-  position: fixed;
+  position: relative;
   -webkit-box-shadow: 0px 5px 10px 0px rgba(50, 50, 50, 0.65);
   -moz-box-shadow:    0px 5px 10px 0px rgba(50, 50, 50, 0.65);
   box-shadow:         0px 5px 10px 0px rgba(50, 50, 50, 0.65);
