--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,11 @@ a:active {
 }
 
 .row {
-  margin: 25px 0;
+  margin-top: 25px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  float: left;
 }
 
 #hero h1 {
@@ -146,4 +150,16 @@ nav > ul > li > a:visited {
 
 #main {
   padding-top: 133px;
+}
+
+.columnLeft {
+  width: 60%;
+  float: left;
+  padding: 0px;
+}
+
+.columnRight{
+  width: 35%;
+  float: right;
+  padding: 0 10 0 10;
 }
