--- a/css/style.css
+++ b/css/style.css
@@ -163,3 +163,30 @@ nav > ul > li > a:visited {
   float: right;
   padding: 0 10 0 10;
 }
+
+#contact {
+  margin-top: 30px;
+}
+
+.icon {
+  width: 45px;
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+
+.social-box {
+  margin-top: 45px;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+.copyright {
+  float: left;
+  clear: left;
+  margin-top: 15px;
+  width: 100%;
+  text-align: center;
+}
