--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ h1 {
 h2 {
   font-size: 2.25em;
   font-weight: 700;
+  width: 100%;
 }
 
 h3 {
@@ -102,6 +103,7 @@ a:active {
 
 #hero h1 {
   text-align: center;
+  color: #800000;
 }
 
 .center {
@@ -117,7 +119,7 @@ header {
   padding: 10px 5px 15px 5px;
   /* border-bottom: 3px solid #4a4a4a; */
   text-align: center;
-  width: 100%;
+  width: 100%
   position: relative;
   -webkit-box-shadow: 0px 5px 10px 0px rgba(50, 50, 50, 0.65);
   -moz-box-shadow:    0px 5px 10px 0px rgba(50, 50, 50, 0.65);
@@ -146,7 +148,6 @@ nav > ul > li > a:visited {
 }
 
 #hero {
-  background-color: #ffe3c3;
   padding: 20px 0;
   display: inline-block;
   width: 100%;
@@ -196,6 +197,17 @@ nav > ul > li > a:visited {
 }
 
 footer {
+  width: 100%;
   float: left;
   margin-top: 50px;
+}
+
+.paddedImg {
+  float: left;
+  margin-top: 30px;
+}
+
+.floatRight {
+  margin-left: auto;
+  margin-right: auto;
 }
