--- a/css/style.css
+++ b/css/style.css
@@ -151,6 +151,11 @@ nav > ul > li > a:visited {
   padding: 20px 0;
   display: inline-block;
   width: 100%;
+  text-align: center;
+}
+
+#hero span {
+  display: block;
 }
 
 #main {
@@ -210,4 +215,46 @@ footer {
 .floatRight {
   margin-left: auto;
   margin-right: auto;
+}
+
+@media only screen and (min-width: 640px) {
+  header {
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
+
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 100px;
+  }
+
+  .col-md-6 {
+  width: 50%;
+  }
+
+  [class*="col-"] {
+    float: left;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .row::after {
+  content: "";
+  clear: both;
+  display: table;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .col-lg-7 {
+    width: 60%;
+  }
+
+  .col-lg-5 {
+    width: 40%;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
 }
