--- a/css/style.css
+++ b/css/style.css
@@ -188,9 +188,9 @@ nav > ul > li > a:visited {
 
 .social-box {
   margin-top: 45px;
-  display: flex !important;
-  align-items: center !important;
-  justify-content: center !important;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .copyright {
@@ -257,4 +257,9 @@ footer {
 }
 
 @media only screen and (min-width: 1440px) {
+  .container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
