--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ a:active {
   padding: 10px;
   border-radius: 3px;
   border-bottom: 2px solid #994c30;
-  transition: 0.2s opacity;
+  transition: 0.2s;
 }
 .button:hover,
 .button:focus,
@@ -119,7 +119,7 @@ header {
   padding: 10px 5px 15px 5px;
   /* border-bottom: 3px solid #4a4a4a; */
   text-align: center;
-  width: 100%
+  width: 100%;
   position: relative;
   -webkit-box-shadow: 0px 5px 10px 0px rgba(50, 50, 50, 0.65);
   -moz-box-shadow:    0px 5px 10px 0px rgba(50, 50, 50, 0.65);
