--- a/css/style.css
+++ b/css/style.css
@@ -62,12 +62,14 @@ a:active {
 .button {
   display: inline-block;
   background-color: #ff7f50;
-  color: #ffffff !important;
+  color: white !important;
   font-weight: 400;
+  text-decoration: none;
   padding: 10px;
   border-radius: 3px;
   border-bottom: 2px solid #994c30;
   transition: 0.2s;
+  transition-property: all;
 }
 .button:hover,
 .button:focus,
@@ -262,4 +264,37 @@ footer {
     margin-left: auto;
     margin-right: auto;
   }
+}
+
+.berlin-illustration {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
+@keyframes color-change {
+  0% {fill: #edc655;}
+  50% {fill: #fcffad;}
+  100% {fill: #f76414;}
+}
+
+.sun {
+  animation-duration: 4s;
+  animation-name: color-change;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+@keyframes cloud-move {
+  from {transform: translate(0,50px);}
+  to {transform: translate(200px,50px);}
+}
+
+.cloud-front {
+  animation-duration: 30s;
+  animation-name: cloud-move;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
 }
