--- a/css/style.css
+++ b/css/style.css
@@ -298,3 +298,12 @@ footer {
   animation-direction: alternate;
   animation-timing-function: linear;
 }
+
+@keyframes cloud-move-reverse {
+  from {transform: translate(446px,48px);}
+  to {transform: translate(100px, 48px);}
+}
+
+.cloud-back {
+  animation: 34s cloud-move-reverse infinite alternate linear;
+}
