--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,8 @@ a:active {
   margin-left: 0px;
   margin-right: 0px;
   float: left;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #c4c4c4;
 }
 
 #hero h1 {
