--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,6 @@ header {
   background-color: #ffe3c3;
   padding: 10px 5px 15px 5px;
   /* border-bottom: 3px solid #4a4a4a; */
-  text-align: center;
   width: 100%;
   position: relative;
   -webkit-box-shadow: 0px 5px 10px 0px rgba(50, 50, 50, 0.65);
@@ -130,12 +129,27 @@ header {
   box-shadow:         0px 5px 10px 0px rgba(50, 50, 50, 0.65);
 }
 
-nav > ul > li {
-  display: inline-block;
+.navtoggle li:not(:last-child) {
+  display: none;
 }
 
-nav {
-  width: 100%;
+.navtoggle,
+.navtoggle.responsive {
+  position: relative;
+}
+
+.navtoggle li .icon {
+  position: absolute;
+  right: 0;
+  top: 2px;
+  font-size: 20px;
+  padding-right: 0;
+  margin-top: 50px;
+}
+
+nav ul {
+  list-style-type: none;
+  margin: 0;
 }
 
 nav > ul > li > a {
@@ -149,6 +163,10 @@ nav > ul > li > a:visited {
   text-transform: uppercase;
   font-weight: 700;
   color: #4a4a4a;
+}
+
+.navtoggle.responsive li  {
+  display: block;
 }
 
 #hero {
@@ -227,10 +245,22 @@ footer {
     padding: 20px 0 13px;
   }
 
+  nav > ul > li {
+    display: inline-block;
+  }
+
   nav {
     width: auto;
     float: right;
-    margin-top: 100px;
+    margin-top: 120px;
+  }
+
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
+  }
+
+  .navtoggle li:last-child {
+    display: none;
   }
 
   .logo {
