--- a/css/style.css
+++ b/css/style.css
@@ -165,8 +165,17 @@ nav > ul > li > a:visited {
   color: #4a4a4a;
 }
 
+.navtoggle.responsive nav {
+  padding: 24px 0 0;
+}
 .navtoggle.responsive li  {
   display: block;
+  padding: 10px 0;
+  border-top: 1px solid rgba(255,127,80,0.5);
+}
+
+.navtoggle.responsive li:last-child  {
+  padding: 0 0 10px;
 }
 
 #hero {
