--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ a:active {
 }
 
 header {
-  background-color: #ffe3c3;
+  background-color: #dededd;
   padding: 10px 5px 15px 5px;
   /* border-bottom: 3px solid #4a4a4a; */
   width: 100%;
